--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <script src="js/scripts.js" type="text/javascript"></script>
   </head>
   <body>
-
+    <div class="container">
+      <h1>Take This Survey!</h1>
+      <form>
+        <select class="form-control" id="food">
+          <option value ="none">Pick a food</option>
+          <option value="pizza">Pizza</option>
+          <option value="burgers">Burgers</option>
+          <option value="hot dogs">Hot Dogs</option>
+          <option value="pasta">Pasta</option>
+        </select>
+        
+      </form>
+    </div>
   </body>
 </html>
