Add radio buttons and accompanying js variable.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
           <option value="hot dogs">Hot Dogs</option>
           <option value="pasta">Pasta</option>
         </select>
-        
+        <div class="radio">
+          <label>
+            <input type="radio" name="wine" value="cabernet" checked>
+            Cabernet
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="wine" value="merlot">
+            Merlot
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="wine" value="chardonnay">
+            Chardonnay
+          </label>
+        </div>
       </form>
     </div>
   </body>
