--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             Chardonnay
           </label>
         </div>
+        <div class="form-group">
+            <input id="name" placeholder="Enter Your Name">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
   </body>
