--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1>Take This Survey!</h1>
-      <form>
+      <form id="survey">
         <select class="form-control" id="food">
           <option value ="none">Pick a food</option>
           <option value="pizza">Pizza</option>
@@ -37,11 +37,19 @@
             Chardonnay
           </label>
         </div>
+
         <div class="form-group">
-            <input id="name" placeholder="Enter Your Name">
+            <input id="name-input" placeholder="Enter Your Name">
         </div>
+
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+
+      <div id="output">
+        <span id="food1"></span>
+        <span id="wine"></span>
+        <span id="name"></span>
+      </div>
     </div>
   </body>
 </html>
